Post-merge fixes and improvements